Update ai.html for testing

--- a/ai.html
+++ b/ai.html
@@ -14,7 +14,7 @@
 <head>
     <title>Artificial Intelligence </title>
     <h1>Artificial Intelligence Project by Christos Mitropoulos and George Chantzialexiou</h1>
-    <p>Robots Movement with A* Algorithm <br>If your input is printed, robot 1 cannot reach robot 2 because it is stuck <br> </p>
+    <p>Robots Movement with A* Algorithm <br>If your input is printed, robot 1 can't reach robot 2 because it is stuck <br> </p>
 </head>
 <body>
     <style>
